fix bug navigation z-index

--- a/source/stylus/components/nav.styl
+++ b/source/stylus/components/nav.styl
@@ -101,6 +101,7 @@
   padding 0 0 10px 0
 
 .flexnav__dropwrap:hover .flexnav__dropcnt
+  z-index 10
   transition .5s all ease
   transition-property height, opacity, visibility
   height auto
